--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     background-color: var(--main-color);
     font-family: 'Rubik', sans-serif;
     color: #323232;
+    width: 100vw;
 }
 
 .wrapper {
