--- a/style.css
+++ b/style.css
@@ -31,6 +31,54 @@ body {
     margin-bottom: 3rem;
 }
 
+header > h1 {
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 5rem;
+}
+
+header > h1::before {
+    content: '';
+    position: absolute;
+    display: block;
+    height: 3px;
+    width: 100px;
+    bottom: -25px;
+    left: 50%;
+    transform: translate(-50%);
+    background-color: var(--contrast-color);
+}
+
+.filter-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 2rem;
+}
+
+.filter-menu > * {
+    width: 120px;
+    padding: 0.6rem 1.2rem;
+    border: 1px solid var(--contrast-color);
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-family: 'Rubik', sans-serif;
+    font-weight: bold;
+    background-color: #fff;
+    /* color: var(--contrast-color); */
+    cursor: pointer;
+    transition: all 0.4s;
+}
+
+.filter-menu > *:hover {
+    background-color: var(--contrast-color);
+    color: #fff;
+}
+
 main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
@@ -46,6 +94,7 @@ main {
     /* background-color: var(--dark-main); */
     border-radius: 0.8rem;
     padding: 2rem;
+    min-width: 450px;
 }
 
 .menu-item > * {
@@ -99,4 +148,45 @@ h2 {
 
 .text-description {
     color: #555555;
+}
+
+/* Mobile view */
+
+@media screen and (max-width: 768px) {
+    .menu-item {
+        display: flex;
+        align-items: center;
+        justify-self: center;
+        gap: 40px;
+    }
+
+    .menu-item > * {
+        flex: 1 1 50%;
+    }
+
+    .menu-item > .item-info {
+        display: flex;
+        margin: 0 auto;
+    }
+
+    .filter-menu {
+        padding: 0 1.2rem;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    main {
+        grid-template-columns: 1fr;
+    }
+
+    .menu-item {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 50%;
+        min-width: auto;
+    }
+
+    .menu-item > .item-info {
+        flex-basis: 0;
+    }
 }
